update metadata, dataset csv with descriptives, ccn descriptives

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,4 @@ data/no_merge_vids.csv
 data/to_delete_blackout_vids.csv
 data/to_delete_blackout_vids_post_match.csv
 demographics/rsconnect/documents/join_metadata.Rmd/rpubs.com/rpubs/Document.dcf
+data/demographics_2025.csv
